Sun May 06 04:00:39 BST 2007  Olly Betts <olly@survex.com>

	* expand/ortermlist.cc: Remove incorrect assertion check in
	  OrTermList::next(), replacing it with anexplanatory comment.

Sun May 06 02:42:30 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Fix typo.

Sun May 06 02:39:23 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Aha!  Richard's patch failed to compile
	  because stdlib.h was in "#ifndef __WIN32__" not "#ifdef __WIN32__".

Sun May 06 02:27:18 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Protect _set_invalid_parameter_handler, etc
	  by _MSC_VER >= 1400 (MSVC 2005) and __STDC_SECURE_LIB__ (undocumented
	  but cribbed from the Python sources).  Refactor into a handy class
	  (MSVCIgnoreInvalidParameter) which just needs to be instantiated in
	  the scope where you want to allow invalid parameters to be passed.

Sun May 06 01:42:06 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Rework use of _invalid_parameter_handler to
	  only apply when _MSC_VER is defined, to fix the mingw build.

Sat May 05 22:30:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* net/remoteconnection.cc: Under __WIN32__, add an invalid
	  parameter handler which ignores the error and use it for the
	  calls to _get_osfhandle() which are sometimes expected to fail.
	  Requires stdlib.h according to msdn, so also #include that.

Sat May 05 20:43:29 BST 2007  Olly Betts <olly@survex.com>

	* bin/xapian-progsrv.cc,bin/xapian-tcpsrv.cc,common/remoteconnection.h,
	  common/remoteserver.h,common/tcpserver.h,net/remoteserver.cc,
	  net/tcpserver.cc: Open a fresh copy of the database(s) on each
	  connection to a xapian-tcpsrv rather than relying on being able to
	  share a database across fork() or between threads (which we don't
	  promise will work).  Largely based on patch from Mark Hammond.
	  Fixes some of bug#141 and all of bug#142.
